// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioCriterion /> renders correctly 1`] = `
<Form.RadioSet
  name="criterionName"
  value="abc"
>
  <Form.Radio
    className="criteria-option"
    description="1 points"
    key="option1"
    onChange={[MockFunction onChange]}
    value="0"
  >
    Option 1
  </Form.Radio>
  <Form.Radio
    className="criteria-option"
    description="2 points"
    key="option2"
    onChange={[MockFunction onChange]}
    value="1"
  >
    Option 2
  </Form.Radio>
</Form.RadioSet>
`;

exports[`<RadioCriterion /> renders correctly with no options 1`] = `
<Form.RadioSet
  name="criterionName"
  value="abc"
/>
`;

exports[`<RadioCriterion /> renders correctly with training error 1`] = `
<Form.RadioSet
  name="criterionName"
  value="abc"
>
  <Form.Radio
    className="criteria-option"
    description="1 points"
    key="option1"
    onChange={[MockFunction onChange]}
    value="0"
  >
    Option 1
  </Form.Radio>
  <Form.Radio
    className="criteria-option"
    description="2 points"
    key="option2"
    onChange={[MockFunction onChange]}
    value="1"
  >
    Option 2
  </Form.Radio>
  <Form.Control.Feedback
    className="feedback-success-msg"
    type="invalid"
  >
    Reevaluate and select a new score
  </Form.Control.Feedback>
</Form.RadioSet>
`;

exports[`<RadioCriterion /> renders correctly with validation and training error 1`] = `
<Form.RadioSet
  name="criterionName"
  value="abc"
>
  <Form.Radio
    className="criteria-option"
    description="1 points"
    key="option1"
    onChange={[MockFunction onChange]}
    value="0"
  >
    Option 1
  </Form.Radio>
  <Form.Radio
    className="criteria-option"
    description="2 points"
    key="option2"
    onChange={[MockFunction onChange]}
    value="1"
  >
    Option 2
  </Form.Radio>
  <Form.Control.Feedback
    className="feedback-error-msg"
    type="invalid"
  >
    Rubric selection is required
  </Form.Control.Feedback>
  <Form.Control.Feedback
    className="feedback-success-msg"
    type="invalid"
  >
    Reevaluate and select a new score
  </Form.Control.Feedback>
</Form.RadioSet>
`;

exports[`<RadioCriterion /> renders correctly with validation error 1`] = `
<Form.RadioSet
  name="criterionName"
  value="abc"
>
  <Form.Radio
    className="criteria-option"
    description="1 points"
    key="option1"
    onChange={[MockFunction onChange]}
    value="0"
  >
    Option 1
  </Form.Radio>
  <Form.Radio
    className="criteria-option"
    description="2 points"
    key="option2"
    onChange={[MockFunction onChange]}
    value="1"
  >
    Option 2
  </Form.Radio>
  <Form.Control.Feedback
    className="feedback-error-msg"
    type="invalid"
  >
    Rubric selection is required
  </Form.Control.Feedback>
</Form.RadioSet>
`;
